@@ -300,10 +300,13 @@ subroutine generate_external_pot(h, sys)
 !!$  end do
 !!$  stop
 
-  call oct_parse_logical(C_string("OutputLocalPotential"), .false., output_local)
-  call oct_parse_string(C_string("OutputLocalPotentialSubspace"), "", output_local_subspace)
-  if(output_local) call dmesh_write_function( &
-        sys%m, h%vpsl, units_out%energy%factor, trim(sys%sysname)//'.lpot', output_local_subspace)
+  call oct_parse_logical("OutputLocalPotential", .false., output_local)
+  if(output_local) then
+    call clear_str(output_local_subspace)
+    call oct_parse_string("OutputLocalPotentialSubspace", output_local_subspace, output_local_subspace)
+    call dmesh_write_function(sys%m, h%vpsl, units_out%energy%factor, &
+         trim(sys%sysname)//'.lpot', output_local_subspace)
+  end if
 
   call pop_sub()
 contains
